duniverse/menhirLib.20200211/test/static/bad/inline-attribute-def.mly
%token A B
%start<unit> main
%%
main:
  foo(B) {}

%inline foo [@cost 0] (bar):
  A bar {}
