duniverse/menhirLib.20200211/test/static/bad/inline-attribute-def.exp
File "inline-attribute-def.mly", line 7, characters 12-21:
Error: the nonterminal symbol foo is declared %inline.
It cannot carry an attribute.
